일단 커밋밋

--- a/_posts/2025-01-21-BOJ_2164.md
+++ b/_posts/2025-01-21-BOJ_2164.md
@@ -4,7 +4,8 @@ title: "[백준/C++] 2164번 카드2"
 categories: [CodingTest, Algorithm, Queue, Silver]
 tag: c++
 toc: true
-author_profile: false
+toc_sticky: true
+author_profile: true
 sidebar:
   nav: "docs"
 # search: false
