백준 실버 2164 카드2 재 업로드드

--- a/_posts/2025-01-21-BOJ_2164.md
+++ b/_posts/2025-01-21-BOJ_2164.md
@@ -2,7 +2,7 @@
 layout: single
 title: "[백준/C++] 2164번 카드2"
 categories: [CodingTest, Algorithm, Queue, Silver]
-tag: c++
+tag: C++
 toc: true
 toc_sticky: true
 author_profile: true
@@ -10,9 +10,18 @@ sidebar:
   nav: "docs"
 # search: false
 ---
+
+### 주의사항
+<div class="notice--warning">
+  <ul>
+      <li>제 지식을 바탕으로 쓰는 것이기에 모든 것이 완벽한 사실은 아닙니다.</li>
+      <li>이러한 접근 방법, 개념이 있다는 것을 공유하는 것이 목표이기에<br /> 따로 더 생각, 공부하면서 개선방향을 찾는것을 권장드립니다.</li>
+  </ul>
+</div>
+
 ### 문제
 [문제바로가기](https://www.acmicpc.net/problem/2164)
-<br/><br/>
+<br/>
 
 ### 문제 간단 요약
 <ol>
@@ -24,7 +33,7 @@ sidebar:
 
 ### 내가 사용한 자료구조
 <ul>
-  <li>queue : FIFO(First in First out) 자료구조로, 제일 처음 들어온 요소부터 먼저 빠져나간다.
+  <li><b>queue</b> : FIFO(First in First out) 자료구조로, 제일 처음 들어온 요소부터 먼저 빠져나간다.
     <ol>
       <li>queue에 입력 순서대로 담는다.</li>
       <li>제일 첫 요소를 pop한다.</li>
@@ -36,7 +45,7 @@ sidebar:
 </ul>
 
 ### 코드
-```C++
+```c++
 #include<iostream>
 #include<queue>
 using namespace std;
