백준 실버1 22939 쿠키쿠르 코드 수정

--- a/_posts/2025-02-11-BOJ_22939.md
+++ b/_posts/2025-02-11-BOJ_22939.md
@@ -49,23 +49,16 @@ sidebar:
 #include<map>
 #include<vector>
 #include<algorithm>
-#include<math.h>
 using namespace std;
 
-int main() {
-#include<iostream>
-#include<map>
-#include<vector>
-#include<algorithm>
-#include<math.h>
-using namespace std;
+int n, smallDist = 100000000, flag[100];
+char c[104][104];
+map<char, vector<pair<int, int>>> ma;
+map<int, vector<char>> retMap;
+
+int ABS(int a) { return a < 0 ? -a : a; }
 
 int main() {
-	int n, smallDist = 100000000, flag[100];
-	char c[104][104];
-	map<char, vector<pair<int, int>>> ma;
-	map<int, vector<char>> retMap;
-
 	cin >> n;
 	// key value 형식으로 담기
 	for (int i = 0; i < n; i++) {
@@ -82,10 +75,10 @@ int main() {
 			pair<int, int> curPlace = { ma['H'][0].first, ma['H'][0].second }; // 시작 위치
 			int dist = 0; // 움직인 거리
 			for (auto cp : cookiesPlaces) {
-				dist += (abs(curPlace.first - cp.first) + abs(curPlace.second - cp.second));
+				dist += (ABS(curPlace.first - cp.first) + ABS(curPlace.second - cp.second));
 				curPlace = { cp.first, cp.second };
 			}
-			dist += abs(curPlace.first - ma['#'][0].first) + abs(curPlace.second - ma['#'][0].second); // 도착 지점
+			dist += ABS(curPlace.first - ma['#'][0].first) + ABS(curPlace.second - ma['#'][0].second); // 도착 지점
 			if (smallDist < dist) continue;
 			smallDist = dist;
 			retMap[smallDist].push_back(a.first);
@@ -99,7 +92,6 @@ int main() {
 	else if (flag['B']) cout << "Mage" << "\n";
 	else if (flag['W']) cout << "Tanker" << "\n";
 	return 0;
-}
 }
 ```
 
