복사버튼 추가가

--- a/_posts/2025-02-06-BOJ_17609.md
+++ b/_posts/2025-02-06-BOJ_17609.md
@@ -73,6 +73,7 @@ sidebar:
 </ol>
 
 ### 코드
+{% include code-header.html %}
 ```c++
 #include<iostream>
 using namespace std;
@@ -101,6 +102,7 @@ int main() {
 ```
 
 ### 어떻게든 맞아야겠다고 막 짠 코드
+{% include code-header.html %}
 ```c++
 #include<iostream>
 using namespace std;
